# quokkadispatcher

./: .gitignore  README.md  package-lock.json
QuokkaDispatcher/: config.lua  fxmanifest.lua  package-lock.json  package.json
QuokkaDispatcher/client/: main.lua
QuokkaDispatcher/integrations/pma-voice/: PATCH_TEMPLATE.md  example_qdav_forward.lua
QuokkaDispatcher/server/: main.lua  phone.lua  radio.lua  voice-relay.js  websocket.js
electron-app/: main.js  package-lock.json  package.json  preload.js
electron-app/src/: index.html
electron-app/src/css/: style.css
electron-app/src/js/: app.js  ui.js
electron-app/src/lib/: ws-client.js
native-audio-bridge/: README.md
native-audio-bridge/cpp-forwarder/: CMakeLists.txt
native-audio-bridge/cpp-forwarder/include/: audio_packet.hpp
native-audio-bridge/cpp-forwarder/src/: audio_packet.cpp  main.cpp
native-audio-bridge/rust-forwarder/: Cargo.toml
native-audio-bridge/rust-forwarder/src/: main.rs
